--- a/code/Makefile
+++ b/code/Makefile
@@ -1,5 +1,5 @@
 FC = gfortran
-FCFLAGS = -O3 -fopenmp -g -ffree-line-length-none -fbounds-check
+FCFLAGS = -O3 -fopenmp -g -ffree-line-length-none -fbounds-check 
 #HEALPIX = /Users/ciaranohare/Work/Zaragoza/Healpix_3.40 # if using healpix this will need to be linked
 #FCFLAGS += -I$(HEALPIX)/include -L$(HEALPIX)/lib -lhealpix -lcfitsio # and this is how you link it
 
@@ -16,7 +16,7 @@ neldermead.o: neldermead.f
 		$(FC) $(FCFLAGS) -c neldermead.f
 
 $(PROGRAMS): $(OBJFILES)
-	$(FC) $(FCFLAGS) $@.f95  -o $@ $^
+	$(FC) $(FCFLAGS) $@.f95  -o ../$@ $^
 
 clean:
 	rm -f *.o *.mod
