--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-labfuncs.mod
-like.mod
-neutrinofuncs.mod
-params.mod
-util.mod
-wimpfuncs.mod
-LabFuncs.o
-like.o
-neldermead.o
-NeutrinoFuncs.o
-params.o
-util.o
-WIMPFuncs.o
-runLimits.dSYM
-runMollweide.dSYM
+.ipynb_checkpoints/*
+*.dSYM
+*.mod
+*.o
+*.pyc
 runCYGNUS1000
 runMollweide
