--- a/code/Makefile
+++ b/code/Makefile
@@ -1,10 +1,10 @@
 FC = gfortran
 FCFLAGS = -O3 -fopenmp -g -ffree-line-length-none -fbounds-check
-#HEALPIX = /Users/ciaranohare/Work/Zaragoza/Healpix_3.40 # if using healpix this will need to be linked
+#HEALPIX = /Users/ciaranohare/Work/Zaragoza/Healpix_3.40# if using healpix this will need to be linked
 #FCFLAGS += -I$(HEALPIX)/include -L$(HEALPIX)/lib -lhealpix -lcfitsio # and this is how you link it
 
 OBJFILES = params.o neldermead.o util.o LabFuncs.o WIMPFuncs.o NeutrinoFuncs.o like.o
-PROGRAMS = runCYGNUS_All runCYGNUS_Ideal runMollweide
+PROGRAMS = runCYGNUS_All runCYGNUS_Ideal runCYGNUS_thresholds runMollweide runCYGNUS_Exposure runSkymaps
 
 
 all: clean $(OBJFILES) $(PROGRAMS)
