--- a/code/Makefile
+++ b/code/Makefile
@@ -4,7 +4,7 @@ HEALPIX = /Users/ciaranohare/Work/Zaragoza/Healpix_3.40# if using healpix this w
 FCFLAGS += -I$(HEALPIX)/include -L$(HEALPIX)/lib -lhealpix -lcfitsio # and this is how you link it
 
 OBJFILES = params.o neldermead.o util.o LabFuncs.o WIMPFuncs.o NeutrinoFuncs.o like.o
-PROGRAMS = runCYGNUS_All runCYGNUS_Ideal runCYGNUS_thresholds runMollweide runCYGNUS_Exposure runSkymaps runNuFloor
+PROGRAMS = runCYGNUS_All runCYGNUS_Ideal runCYGNUS_thresholds runMollweide runCYGNUS_Exposure runCYGNUS_timeline runSkymaps runNuFloor
 
 
 all: clean $(OBJFILES) $(PROGRAMS)
